Bug 401298 - "Including jsapi.h generates many warnings with certain compiler configurations (e.g. gcc 3.4 -Wstrict-prototypes)" [p=wes@page.ca (Wesley W. Garland) r=mrbkap a1.9=brendan]